Fix whitelink in light theme
White link is unreadable in light theme.

Fix whitelink in light theme on manage page.

--- a/gui/slick/css/light.css
+++ b/gui/slick/css/light.css
@@ -610,7 +610,7 @@ manage*.tmpl
 }
 
 a.whitelink{
-	color:#fff
+	color:#000
 }
 
 /* =======================================================================
